# apvlv

./: .clang-format  .dir-locals.el  .gitignore  AUTHORS  CMakeLists.txt  Makefile.am  NEWS  README  README.md  Readme  Startup.tex  THANKS  TODO  apvlv.1  apvlv.desktop  apvlvrc.example  configure.ac  index.html  main_menubar.glade  vcpkg.json  zh_CN.ts
.github/workflows/: ci.yml  cmake-multi-platform.yml
cmake/: CompileFlags.cmake  Dependencies.cmake  Options.cmake
poppler/goo/: GooMutex.h  GooString.cc  gfile.cc  gfile.h
poppler/poppler/: ABWOutputDev.cc  ABWOutputDev.h  Annot.cc  Annot.h  ArthurOutputDev.cc  CMap.cc  CairoFontEngine.cc  CairoOutputDev.cc  CairoOutputDev.h  Catalog.cc  Catalog.h  DateInfo.cc  Decrypt.cc  Form.h  Function.cc  Gfx.h  GfxFont.cc  GfxState.cc  GlobalParams.cc  GlobalParams.h  GlobalParamsWin.cc  JBIG2Stream.cc  JBIG2Stream.h  Lexer.cc  Link.cc  Object.h  OutputDev.cc  OutputDev.h  PSOutputDev.cc  Page.cc  Page.h  PageLabelInfo.h  Parser.cc  PreScanOutputDev.h  SplashOutputDev.cc  Stream.h  TextOutputDev.cc  TextOutputDev.h  UnicodeTypeTable.cc  XRef.cc
poppler/splash/: SplashBitmap.cc  SplashBitmap.h  SplashFTFont.cc  SplashFTFont.h  SplashFTFontEngine.cc  SplashFontEngine.cc  SplashScreen.cc  SplashState.cc  SplashT1FontEngine.cc  SplashTypes.h  SplashXPath.h
scripts/: build.ps1  build.sh
share/scripts/: internal.js
src/: .ApvlvCmds.cc.swp  ApvlvAxOffice.cc  ApvlvAxOffice.h  ApvlvCmds.cc  ApvlvCmds.cpp  ApvlvCmds.h  ApvlvCmds.hpp  ApvlvCompletion.cc  ApvlvCompletion.h  ApvlvContent.cc  ApvlvContent.h  ApvlvCore.cc  ApvlvCore.cpp  ApvlvCore.h  ApvlvCore.hpp  ApvlvDir.cc  ApvlvDir.cpp  ApvlvDir.h  ApvlvDir.hpp  ApvlvDirectory.cc  ApvlvDirectory.h  ApvlvDired.cc  ApvlvDired.h  ApvlvDjvu.cc  ApvlvDjvu.h  ApvlvDoc.cc  ApvlvDoc.cpp  ApvlvDoc.h  ApvlvDoc.hpp  ApvlvEditor.cc  ApvlvEditor.h  ApvlvEpub.cc  ApvlvEpub.h  ApvlvFb2.cc  ApvlvFb2.h  ApvlvFile.cc  ApvlvFile.cpp  ApvlvFile.h  ApvlvFile.hpp  ApvlvFileIndex.cc  (+100 more)
src/file/: ApvlvAxOffice.cc  ApvlvAxOffice.h  ApvlvDjvu.cc  ApvlvDjvu.h  ApvlvEpub.cc  ApvlvEpub.h  ApvlvFb2.cc  ApvlvFb2.h  ApvlvHtm.cc  ApvlvHtm.h  ApvlvImage.cc  ApvlvImage.h  ApvlvLibreOffice.cc  ApvlvLibreOffice.h  ApvlvMuPdf.cc  ApvlvMuPdf.h  ApvlvPopplerPdf.cc  ApvlvPopplerPdf.h  ApvlvQtPdf.cc  ApvlvQtPdf.h  ApvlvTxt.cc  ApvlvTxt.h
vcpkg-manifests/system-qt/: vcpkg.json
win32/: apvlv.sln  apvlv.vcproj  autorun.bat  libpoppler.vcproj  makefile.vc
win32/apvlv-setup/: apvlv-setup.vdproj
win32/djvulibre/: libdjvulibre.lib
win32/djvulibre/include/libdjvu/: ddjvuapi.h  miniexp.h
win32/freetype235/: freetype-static.lib
win32/libumd-src/: CMakeLists.txt  Doxyfile  umd.c  umd.h  umd2txt.c  umd_internals.h  umd_page.c  umdtest.c
win32/libumd-src/libiconv-1.9.2-1-lib/manifest/: libiconv-1.9.2-1-lib.ver
win32/msvc/: config.h
win32/msvc/poppler/: poppler-config.h
win32/poppler-0.10.0/fofi/: FoFiTrueType.cc  FoFiType1C.cc
win32/poppler-0.10.0/glib/: poppler-action.cc  poppler-annot.cc  poppler-annot.h  poppler-attachment.cc  poppler-document.cc  poppler-document.h  poppler-enums.c  poppler-enums.h  poppler-features.h  poppler-features.h.cmake  poppler-features.h.in  poppler-form-field.cc  poppler-page.cc  poppler-page.h  poppler-private.h  poppler.cc  poppler.h  test-poppler-glib.cc
win32/poppler-0.10.0/goo/: FixedPoint.h  GooString.h  gfile.cc  gfile.h  gmem.cc  gmem.h
win32/poppler-0.10.0/poppler/: ArthurOutputDev.h  CMap.h  CairoFontEngine.h  CharCodeToUnicode.cc  DCTStream.cc  DCTStream.h  DateInfo.h  Decrypt.h  FileSpec.cc  FontInfo.cc  FontInfo.h  Form.cc  Function.h  Gfx.cc  GfxFont.h  GfxState.h  GlobalParams.cc  GlobalParamsWin.cc  JPEG2000Stream.cc  OptionalContent.cc  OptionalContent.h  Outline.cc  PDFDoc.cc  PDFDoc.h  PSOutputDev.h  PageLabelInfo.cc  PageTransition.cc  PreScanOutputDev.cc  Sound.cc  SplashOutputDev.h  Stream.cc  poppler-config.h  poppler-config.h.in
win32/poppler-0.10.0/splash/: Splash.cc  SplashClip.h  SplashErrorCodes.h  SplashFTFontEngine.h  SplashFontEngine.h  SplashPath.h  SplashScreen.h  SplashT1FontFile.cc
win32/poppler-data/cMap/Adobe-CNS1/: ETHK-B5-H  ETHK-B5-V  HKscs-B5-H  HKscs-B5-V  UniCNS-UTF16-H  UniCNS-UTF16-V  UniCNS-UTF32-H  UniCNS-UTF32-V  UniCNS-UTF8-H  UniCNS-UTF8-V
win32/poppler-data/cMap/Adobe-GB1/: UniGB-UTF32-H  UniGB-UTF8-H
win32/poppler-data/cMap/Adobe-Japan1/: UniJIS-UTF32-H  UniJIS-UTF8-H  UniJIS2004-UTF16-H  UniJIS2004-UTF32-H  UniJIS2004-UTF8-H  UniJISX0213-UTF32-H  UniJISX02132004-UTF32-H
win32/poppler-data/unicodeMap/: Big5  Big5ascii
win32/poppler-src/: CMakeLists.txt
win32/poppler-src/glib/: poppler-document.cc  poppler-features.h
win32/poppler-src/poppler/: CairoFontEngine.cc  CairoOutputDev.cc  CairoOutputDev.h  Gfx.cc  GfxFont.cc  GfxState.cc  GlobalParams.h  GlobalParamsWin.cc  Link.cc  OptionalContent.cc  PDFDoc.cc  PSOutputDev.cc  XRef.cc
win32/poppler-src/splash/: SplashFTFont.cc
