AM_CFLAGS = -Wall -D_GNU_SOURCE

HEAD = config.hpp \
       ApvlvUtil.hpp \
       ApvlvView.hpp \
       ApvlvCmds.hpp \
       ApvlvParams.hpp \
       ApvlvWindow.hpp \
       ApvlvDoc.hpp

SOURCE = main.cpp \
	 ApvlvUtil.cpp \
	 ApvlvView.cpp \
	 ApvlvCmds.cpp \
	 ApvlvParams.cpp \
	 ApvlvWindow.cpp \
	 ApvlvDoc.cpp

bin_PROGRAMS = apvlv 

apvlv_SOURCES = $(HEAD) $(SOURCE)
