AM_CPPFLAGS = -Wall -D_GNU_SOURCE

HEAD = config.hpp \
       ApvlvUtil.hpp \
       ApvlvCore.hpp \
       ApvlvDir.hpp \
       ApvlvDoc.hpp \
       ApvlvFile.hpp \
       ApvlvView.hpp \
       ApvlvCmds.hpp \
       ApvlvParams.hpp \
       ApvlvWindow.hpp

SOURCE = main.cpp \
	 ApvlvUtil.cpp \
	 ApvlvCore.cpp \
	 ApvlvDir.cpp \
	 ApvlvDoc.cpp \
	 ApvlvFile.cpp \
	 ApvlvView.cpp \
	 ApvlvCmds.cpp \
	 ApvlvParams.cpp \
	 ApvlvWindow.cpp

bin_PROGRAMS = apvlv 

apvlv_SOURCES = $(HEAD) $(SOURCE)
